<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rigot.expensecalculator.ShowExpense">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/expenseDetailsLabel"
        android:id="@+id/expenseDetailsLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nameLabel"
        android:id="@+id/nameLabel"
        android:layout_below="@+id/expenseDetailsLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/catLabel"
        android:id="@+id/catLabel"
        android:layout_below="@+id/nameLabel"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_alignStart="@+id/nameLabel"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amLabel"
        android:id="@+id/amLabel"
        android:layout_below="@+id/catLabel"
        android:layout_alignLeft="@+id/catLabel"
        android:layout_alignStart="@+id/catLabel"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateL"
        android:id="@+id/dateLabel"
        android:layout_below="@+id/amLabel"
        android:layout_alignLeft="@+id/amLabel"
        android:layout_alignStart="@+id/amLabel"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/name"
        android:layout_alignTop="@+id/nameLabel"
        android:layout_toRightOf="@+id/catLabel"
        android:layout_toEndOf="@+id/catLabel"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/category"
        android:layout_alignTop="@+id/catLabel"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amount"
        android:layout_alignTop="@+id/amLabel"
        android:layout_alignLeft="@+id/category"
        android:layout_alignStart="@+id/category" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/date"
        android:layout_alignTop="@+id/dateLabel"
        android:layout_alignLeft="@+id/amount"
        android:layout_alignStart="@+id/amount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/receiptLabel"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receiptImage"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignBottom="@+id/finishButt"
        android:layout_marginBottom="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishShowButton"
        android:id="@+id/finishButt"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:src="@drawable/rightarrow"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/expenseDetailsLabel"
        android:layout_toEndOf="@+id/expenseDetailsLabel" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous"
        android:src="@drawable/leftarrow"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/amLabel"
        android:layout_toEndOf="@+id/amLabel" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showlast"
        android:src="@drawable/showlast"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showfirst"
        android:src="@drawable/showfirst"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
